--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,9 @@
   .navLink {
     @apply block hover:underline decoration-orange-400 text-center decoration-2 active:underline underline-offset-8 rounded-full md:p-4 dark:text-white p-2 cursor-pointer capitalize hover:scale-110 transition-transform duration-200 ease-out;
   }
+
+  .headerTitle {
+    @apply text-4xl font-serif capitalize px-10 pt-5 underline decoration-orange-400 decoration-2 underline-offset-4
+    decoration-double
+  }
 }
